optimize image resolution

--- a/layouts/acerca/list.html
+++ b/layouts/acerca/list.html
@@ -6,7 +6,7 @@
                 {{ .Content }}
                 </div>
             <div class="col-lg-5 content">
-                <img src="/images/alfons.jpeg" alt="Alfons Muñoz">
+                <img style="border: 10px solid #fff;box-shadow: rgb(0 0 0 / 20%) 0 20px 30px 0;" src="/images/alfons.jpeg" alt="Alfons Muñoz">
             </div>
         </div>
     </div>
