--- a/themes/bigspring/layouts/partials/head.html
+++ b/themes/bigspring/layouts/partials/head.html
@@ -3,16 +3,6 @@
 
 <meta name="description" content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YFMJ98Q45"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9YFMJ98Q45');
-</script>
-
 <!-- multilingual SEO optimizations -->
 {{ if .IsTranslated }}
 {{ range .Page.AllTranslations }}
@@ -24,5 +14,5 @@
 <meta property="og:image" content="{{ . | absURL }}" />
 {{ end }}
 {{ template "_internal/opengraph.html" . }}
-{{ template "_internal/google_analytics_async.html" . }}
+<!-- {{ template "_internal/google_analytics_async.html" . }} -->
 {{ site.Params.custom_script | safeHTML }}
