change to use submodules

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,9 +33,9 @@
           {{ end }}
           {{ end }}
 
-          <!-- Language List -->
+          <!-- Language List 
         {{ if .IsTranslated }}
-<!--         <select class="m-2 border-0" id="select-language" onchange="location = this.value;">
+        <select class="m-2 border-0" id="select-language" onchange="location = this.value;">
           {{ $siteLanguages := site.Languages}}
           {{ $pageLang := .Page.Lang}}
           {{ range .Page.AllTranslations }}
@@ -52,8 +52,8 @@
           {{ end }}
           {{ end }}
           {{ end }}
-        </select> -->
-        {{ end }}
+        </select>
+        {{ end }} -->
         </ul>
 
         {{ if site.Params.navigation_button.enable }}
