add english content

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,7 +33,7 @@
           {{ end }}
           {{ end }}
 
-          <!-- Language List 
+          <!-- Language List  -->
         {{ if .IsTranslated }}
         <select class="m-2 border-0" id="select-language" onchange="location = this.value;">
           {{ $siteLanguages := site.Languages}}
@@ -53,7 +53,7 @@
           {{ end }}
           {{ end }}
         </select>
-        {{ end }} -->
+        {{ end }}
         </ul>
 
         {{ if site.Params.navigation_button.enable }}
