--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -1,4 +1,6 @@
-{{ define "main" }} {{ partial "page-header.html" . }}
+{{ define "main" }} 
+
+{{ partial "page-header.html" . }}
 <section class="section bg-white">
     <div class="container">
         <div class="row">
@@ -19,9 +21,5 @@
         </div>
     </div>
 </section>
-
-<!-- call to action -->
-
-<!-- /call to action -->
 
 {{ end }}
