--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,9 @@
+  
 <!-- 
-
 PROJECT: Bigspring Hugo
 VERSION: 2.0.0
 AUTHOR: Gethugothemes
 AUTHOR WEBSITE: https://gethugothemes.com
-
 -->
 
 <!DOCTYPE html>
@@ -12,21 +11,39 @@ AUTHOR WEBSITE: https://gethugothemes.com
 
 <head>
 	{{ partial "head.html" . }}
+
 	{{ if .Site.Params.googleAnalyticsID }}
 	{{ partial "analytics-gtag.html" . }}
 	{{ end }}
+
+	{{ if hugo.IsProduction }}
 	{{ partialCached "style.html" . }}
-	<base href="{{ .Site.BaseURL }}">
+	{{ else }}
+	{{ partial "style.html" . }}
+	{{ end }}
 </head>
 
 <body>
+
+	{{ if hugo.IsProduction }}
 	{{ partialCached "preloader.html" . }}
+	{{ partialCached "header.html" . }}
+	{{ else }}
+	{{ partial "preloader.html" . }}
 	{{ partial "header.html" . }}
+	{{ end }}
+
 	<main>
 		{{ block "main" . }}{{ end }}
 	</main>
-	{{ partial "footer.html" . }}
+
+	{{ if hugo.IsProduction }}
+	{{ partialCached "footer.html" . }}
 	{{ partialCached "script.html" . }}
+	{{ else }}
+	{{ partial "footer.html" . }}
+	{{ partial "script.html" . }}
+	{{ end }}
 </body>
 
 </html>
